tests/ui/parse_expr.stderr
error: no rules expected the token `~`
 --> $DIR/parse_expr.rs:4:19
  |
4 |     json!({ "a" : ~ });
  |                   ^ no rules expected this token in macro call
